# lago-client

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AddOn.md  AddOnBaseInput.md  AddOnCreateInput.md  AddOnObject.md  AddOnUpdateInput.md  AddOnsApi.md  AddOnsPaginated.md  Address.md  AnalyticsApi.md  ApiErrorBadRequest.md  ApiErrorForbidden.md  ApiErrorNotAllowed.md  ApiErrorNotFound.md  ApiErrorUnauthorized.md  ApiErrorUnprocessableEntity.md  AppliedCoupon.md  AppliedCouponInput.md  AppliedCouponInputAppliedCoupon.md  AppliedCouponObject.md  AppliedCouponObjectExtended.md  AppliedCouponsPaginated.md  AppliedUsageThresholdObject.md  BaseAppliedTax.md  BillableMetric.md  BillableMetricBaseInput.md  BillableMetricCreateInput.md  BillableMetricEvaluateExpressionInput.md  BillableMetricEvaluateExpressionInputEvent.md  BillableMetricEvaluateExpressionInputEventPropertiesValue.md  BillableMetricEvaluateExpressionInputEventTimestamp.md  BillableMetricEvaluateExpressionResult.md  BillableMetricEvaluateExpressionResultExpressionResult.md  BillableMetricEvaluateExpressionResultExpressionResultValue.md  BillableMetricFilterInput.md  BillableMetricFilterObject.md  BillableMetricObject.md  BillableMetricUpdateInput.md  BillableMetricsApi.md  BillableMetricsPaginated.md  ChargeFilterInput.md  (+187 more)
src/apis/: add_ons_api.rs  analytics_api.rs  billable_metrics_api.rs  configuration.rs  coupons_api.rs  credit_notes_api.rs  customers_api.rs  events_api.rs  fees_api.rs  invoices_api.rs  mod.rs  organizations_api.rs  payment_requests_api.rs  plans_api.rs  subscriptions_api.rs  (+4 more)
(+212 files in other folders)
