[package]
name = "openapi"
version = "1.17.1"
authors = ["tech@getlago.com"]
description = "Lago API allows your application to push customer information and metrics (events) from your application to the billing application."
license = "AGPLv3"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
